<resources>
  <string name="app_name">My App Portfolio</string>

  <string name="my_name_degree_apps">My Nanodegree Apps!</string>
  <string name="action_settings">Settings</string>
  <string name="SPOTIFY_STREAMER">SPOTIFY STREAMER</string>
  <string name="MY_OWN_APP">MY OWN APP</string>
  <string name="XYZ_READER">XYZ READER</string>
  <string name="BUILD_IT_BIGGER">BUILD IT BIGGER</string>
  <string name="LIBRARY_APP">LIBRARY APP</string>
  <string name="SCORES_APP">SCORES APP</string>
  <string name="This_button_will_launch_App">This button will launch my %s app!</string>
</resources>
