<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/my_name_degree_apps"
      android:textColor="@color/black"
      android:textSize="18sp" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical">

    <Button
        android:id="@+id/spotifyStreamer"
        style="@style/orange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="displayApp"
        android:text="@string/SPOTIFY_STREAMER" />

    <Button
        android:id="@+id/scoresApp"
        style="@style/orange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="displayApp"
        android:text="@string/SCORES_APP" />

    <Button
        android:id="@+id/libraryApp"
        style="@style/orange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="displayApp"
        android:text="@string/LIBRARY_APP" />

    <Button
        android:id="@+id/buildItBigger"
        style="@style/orange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="displayApp"
        android:text="@string/BUILD_IT_BIGGER" />

    <Button
        android:id="@+id/xyzReader"
        style="@style/orange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="displayApp"
        android:text="@string/XYZ_READER" />

    <Button
        android:id="@+id/myOwnApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/red"
        android:onClick="displayApp"
        android:text="@string/MY_OWN_APP" />

  </LinearLayout>

</LinearLayout>
